<resources>
    <string name="app_name">CafePajajaran</string>
    <string name="email">Email</string>
    <string name="password">Password(Min. 7 Character)</string>
    <string name="password_login">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signed">Register</string>
    <string name="already_have_an_account_login">Already Have An Account? Login</string>
    <string name="don_t_have_an_account_sign_in">Don\'t Have An Account? Sign Up</string>
    <string name="meja">Nomor Meja</string>
    <string name="price">Harga</string>
</resources>